<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_group"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_group" />

    <item
        android:id="@+id/navigation_personal"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_personal" />

    <item
        android:id="@+id/navigation_location"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_location" />

    <item
        android:id="@+id/navigation_replay"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_replay" />

    <item
        android:id="@+id/navigation_other"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_other" />

</menu>
